# gosdt-rewrite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
configurations/: blank.json
datasets/: simple.csv
datasets/adult/: data.csv  original.csv
datasets/broward/: broward.names
datasets/hcv/: data.csv
datasets/netherlands_general/: data.csv  test.csv  train.csv
datasets/netherlands_sexual/: data.csv  test.csv  train.csv
datasets/netherlands_violence/: data.csv  test.csv  train.csv
datasets/nyclu/: nyclu.names  original.csv
gosdt/: bitset.cpp  bitset.hpp  config.cpp  config.hpp  dataset.cpp  dataset.hpp  encoder.cpp  encoder.hpp  gosdt.cpp  gosdt.hpp  graph.cpp  graph.hpp  main.cpp  message.cpp  message.hpp  model.hpp  node.cpp  node.hpp  optimizer.cpp  optimizer.hpp  queue.cpp  queue.hpp  result.cpp  result.hpp  utils.hpp
gosdt/utilities/: constants.hpp  logging.hpp  numeric_types.hpp  optional.hpp  time.hpp
gosdt_test/: bitset_test.cpp  test.cpp
include/csv/: csv.h
include/matrix/: matrix.hpp
